# matriz-fonte-stn-dadosmg

./: .env.example  .gitignore  DESCRIPTION  Dockerfile  Makefile  README.md  config.mk  data.toml  datapackage.yaml  matriz-fonte-stn-dadosmg.pbix  matriz.Rmd  matriz.html  pyproject.toml  requirements.in  requirements.txt
.github/: workflow-failure.md
.github/workflows/: all.yaml  main.yaml  update-versions.yaml  update-year.yaml
data/: fonte_stn.csv  matriz_despesa.csv  matriz_despesa_desc.xlsx  matriz_receita.csv  matriz_receita_desc.xlsx
data-raw/: fonte_stn.xlsx  fonte_stn.yaml
docs/: README.md
schemas/: fonte_stn.yaml  matriz_despesa_desc.yaml  matriz_receita_desc.yaml
scripts/: ano_update.py  config.py  docker_build.py  docker_push.py  duplicates.R  extract_info.py  fonte_stn.R  log-alteracoes.R  matriz_despesa.R  matriz_despesa_desc.R  matriz_receita.R  matriz_receita_desc.R  pacotes_check_version.py  publish_ckan.py  run.sh  utils.R
