[project]
name = "matriz-fonte-stn-dadosmg"
version = "0.1.0"
description = "Sistema para processamento de dados da matriz fonte STN"
readme = "README.md"
authors = [{name = "Splor MG", email = "contato@splor.mg"}]
requires-python = ">=3.11,<4.0"
dependencies = [
  "frictionless[excel]>=5.14,<6",
  "dpm @ git+https://github.com/splor-mg/dpm.git@main",
  "requests>=2.31.0,<3",
  "python-dotenv>=1.0.0,<2"
]


[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pytest = "^7.0.0"

[project.scripts]
# Scripts de configuração
config = "scripts.config:main"
extract-info = "scripts.extract_info:main"
pacotes-check-version = "scripts.pacotes_check_version:main"
update-ano = "scripts.ano_update:main_cli"

# Scripts de Docker
docker-build = "scripts.docker_build:main"
docker-push = "scripts.docker_push:main"

# Scripts de publicação
publish-ckan = "scripts.publish_ckan:main"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
tagged-metadata = false
format = "{tag}"
metadata = false
strict = false

[tool.poetry-dynamic-versioning.substitution]
files = ["pyproject.toml"]

[tool.poetry]
# Mantém configuração de pacotes do Poetry para inclusão da pasta scripts
packages = [{include = "scripts"}]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
